# cyclic-scheduling

./: .coveragerc  .gitignore  .mypy.ini  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  cyclic_scheduling.json  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
css/: widget.css
cyclic_scheduling/: __init__.py  __main__.py  _frontend.py  _version.py  cyclic_schedule_plot.py  cyclic_schedule_problem.py  example.py
cyclic_scheduling/nbextension/: extension.js
cyclic_scheduling/tests/: conftest.py  test_example.py  test_nbextension_path.py
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: .gitignore  Conversion.ipynb  Houssin.ipynb  ResNet.ipynb  SuperResolution.ipynb  core-layer-mapping.pickle  introduction.ipynb  sdf.py
examples/architecture/: eyeriss_like_dual_core.py  tpu_like_dual_core.py
examples/mapping/: resnet_mapping.py  super_resolution_mapping.py
examples/problems/: 4tasks.yaml  5tasks.yaml  houssin.yaml
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
